# interflop-backend-adapter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: actions-project-build.yml  ci.yml
Test/: CMakeLists.txt  GenericConfigureFile.cmake
Test/Test_binary/: CMakeLists.txt  executable.cpp  test_binary.py
Test/Test_counter/: CMakeLists.txt  Test_Frontend_executable.cpp  test_counter.py
Test/Test_result/: CMakeLists.txt  Test_Frontend_executable.cpp  test_result.py
backend/: backend.cpp
backend/backend_test_1/: backend.cpp
backend/backend_test_2/: backend.cpp
backend/custom/: backend.cpp  complete_backend.cpp  complete_backend.h
backend/new_back/: backend.cpp
pene_files/: CMakeLists.txt  code_generator.py  interflop_header.hpp
pene_files/templates/: interflop_back_code.h.jinja  replace_module.cpp.jinja
verificarlo_files/: CMakeLists.txt  code_generator.py  interflop_header.hpp
verificarlo_files/templates/: interflop_back_code.c.jinja
verrou_files/: CMakeLists.txt  code_generator.py  code_generator_const.py
verrou_files/diff_files/: generateBackendInterOperator_py.diff  makefile_am.diff  statically_integrated_backends_h.diff  vr_clo_c.diff  vr_main_c.diff  vr_main_h.diff
verrou_files/diff_files/full_modified_files/: Makefile.am  generateBackendInterOperator.py  statically_integrated_backends.h  vr_clo.c  vr_main.c  vr_main.h
verrou_files/templates/: generateBackendInterOperator.py.jinja  interflop_back_code.cxx.jinja  interflop_back_header.h.jinja  makefile.am.jinja  statically_integrated_backends.h.jinja  vr_clo.c.jinja  vr_main.c.jinja  vr_main.c1.jinja  vr_main.c2.jinja  vr_main.h.jinja
